--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -3,9 +3,12 @@
 
 Preparing your environment for migration comprises the following tasks:
 
-* Configuring your current infrastructure as the xref:Preparing_the_source_and_target_environments[source environment]
-* Creating and configuring Red Hat Virtualization as the xref:Preparing_the_source_and_target_environments[target environment]
-* Creating and configuring the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)]
+* Preparing the xref:Preparing_the_vmware_source_environment[VMware environment]
+* Preparing the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform] environment
+* Creating and configuring the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)] or OpenStack Platform conversion appliance.
+// To do - osp xref:[]
 
-include::modules/proc_Preparing_the_source_and_target_environments.adoc[leveloffset=+1]
+include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
+include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
+include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_rhv_conversion_hosts.adoc[leveloffset=+1]
