--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
@@ -16,11 +16,11 @@ For a list of supported guest operating systems, see link:https://access.redhat.
 +
 [NOTE]
 ====
-Although it is possible to migrate guest operating systems that are not certified for RHV, running these guests is not officially supported.
+Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, running these guests is not officially supported.
 ====
 
 What resources will my target environment require?::
-Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process. Their power state after the migration will be the same as before.
+Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process.
 
 What am I missing?::
 Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
