--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -5,32 +5,39 @@ Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your vi
 
 link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
-link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] (OpenStack) provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
+link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
 
 The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], provides the control and automation required to manage challenging enterprise environments.
 
-Currently, IMS supports only cold migration. The virtual machines are powered off gracefully as part of the migration process.
+Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
 
 .IMS Phases
 
 The Infrastructure Migration Solution has 4 key phases:
 
 . Planning the migration:
-.. Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources for the migration.
-.. Follow xref:Best_practices_for_migration[best practices] to minimize the impact on your users. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
+
+* Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources for the migration.
+* Follow xref:Best_practices_for_migration[best practices] to minimize the impact on your users. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
 
 . Preparing the migration environment:
-.. Create and configure the xref:Preparing_the_source_and_target_environments[source and target environments].
-.. Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)].
+
+* Prepare the xref:Preparing_the_vmware_source_environment[VMware] environment as the migration source.
+* Prepare the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform] environment as the migration target.
+* Install and configure CloudForms to manage all the infrastructure providers.
+* Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)] or OpenStack Platform conversion instances.
+// To do xref:[]
 
 . Migrating the infrastructure:
-.. xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment, selecting the virtual machines to migrate.
-.. Create and run a xref:Creating_and_running_a_migration_plan[migration plan], with optional automated pre- and post-migration tasks.
+
+* xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment.
+* Create and run a xref:Creating_and_running_a_migration_plan[migration plan], with optional automated pre- and post-migration tasks.
 
 . Verifying the migration:
-.. Check the completed migration plan for successfully migrated virtual machines.
-.. If errors appear, see xref:Troubleshooting[].
 
-include::modules/con_Workflow_vmware_to_rhv.adoc[leveloffset=+1]
+* Check the completed migration plan for successfully migrated virtual machines.
+* If errors appear, see xref:Troubleshooting[].
 
-include::modules/con_Workflow_vmware_to_osp.adoc[leveloffset=+1]
+include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
+
+include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
