--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -1,7 +1,7 @@
 [id="Best_practices_for_migration"]
 = Best Practices for Migration
 
-* Run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_pre_and_post_migration_tasks_with_ansible[] for more information.
+* If you are migrating to Red Hat Virtualization, run the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL pre-migration Ansible playbook] to preserve static IP address configuration and to install the RHV guest agent. See xref:Automating_pre_and_post_migration_tasks_with_ansible[] for more information.
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
 
