workflows, prep, troubleshooting done. osp conv app in progress.

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -7,7 +7,7 @@ link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[R
 
 link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
 
-The IMS user interface, link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], provides the control and automation required to manage challenging enterprise environments.
+link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] provides the user interface required to manage challenging enterprise environments.
 
 Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
 
@@ -22,16 +22,16 @@ The Infrastructure Migration Solution has 4 key phases:
 
 . Preparing the migration environment:
 
-* Prepare the xref:Preparing_the_vmware_source_environment[VMware] environment as the migration source.
+* xref:Preparing_the_vmware_source_environment[Prepare the VMware environment] for migration.
 * Prepare the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform] environment as the migration target.
-* Install and configure CloudForms to manage all the infrastructure providers.
-* Create and configure the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)] or OpenStack Platform conversion instances.
-// To do xref:[]
+* Install and configure CloudForms to manage the infrastructure providers and resources.
+* Create and configure xref:Preparing_the_rhv_conversion_hosts[RHV conversion hosts] or OpenStack Platform conversion instances.
+// To do: insert xref:[]
 
 . Migrating the infrastructure:
 
 * xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment.
-* Create and run a xref:Creating_and_running_a_migration_plan[migration plan], with optional automated pre- and post-migration tasks.
+* Create and run a xref:Creating_and_running_a_migration_plan[migration plan].
 
 . Verifying the migration:
 
@@ -39,5 +39,4 @@ The Infrastructure Migration Solution has 4 key phases:
 * If errors appear, see xref:Troubleshooting[].
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
-
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
