--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -5,7 +5,7 @@ Preparing your environment for migration comprises the following tasks:
 
 * Preparing the xref:Preparing_the_vmware_source_environment[VMware environment]
 * Preparing the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform] environment
-* Creating and configuring the xref:Preparing_the_rhv_conversion_hosts[RHV conversion host(s)] or OpenStack Platform conversion appliance.
+* Creating and configuring the xref:Preparing_the_rhv_conversion_hosts[RHV conversion hosts] or OpenStack Platform conversion appliances.
 // To do - osp xref:[]
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
