--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -13,3 +13,5 @@ The network configuration must not be changed in any way during the migration. I
 . Check that no VMware virtual machine has the same name as a virtual machine that already exists in the target environment. A name conflict will cause the migration to fail.
 
 . Unmount ISO images from the VMware virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
+
+. OpenStack Platform migration only: Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] on the virtual machines to capture IP addresses so that they can be associated with OpenStack Platform port groups.
