--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -5,7 +5,7 @@ Migrating your infrastructure comprises 2 tasks:
 
 * xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (cluster, datastore, and networks) of your source environment to your target environment and selecting virtual machines to migrate
 
-* Creating a xref:Creating_and_running_a_migration_plan[migration plan] with optional xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] that run before or after each virtual machine is migrated
+* Creating and running a xref:Creating_and_running_a_migration_plan[migration plan], with the option of running xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] before or after each virtual machine is migrated.
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
