--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,19 +1,19 @@
 [[Creating_an_Infrastructure_Mapping]]
 = Creating an Infrastructure Mapping
 
-The infrastructure mapping maps your VMware resources to RHV resources.
+The infrastructure mapping maps your source resources to target resources.
 
 .Migration Screen
 image:Compute_Manage_UI.png[]
 
 [NOTE]
 ====
-Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping will display a xref:Infrastructure_mapping_missing_networks[missing networks error].
-
 If you add or remove providers or provider objects from an infrastructure mapping, the mapping will display xref:Infrastructure_mapping_missing_resources[missing resource errors].
+
+Red Hat Virtualization only: Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping will display a xref:Infrastructure_mapping_missing_networks[missing networks error].
 ====
 
-. Click menu:Compute[Migration].
+. Click menu:Compute[Migration > Overview].
 . Click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
@@ -22,6 +22,7 @@ If you add or remove providers or provider objects from an infrastructure mappin
 ====
 A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
 ====
+// To do: needs clarification for OSP
 
 . Click *Add Mapping* and *Next*.
 
@@ -40,7 +41,7 @@ A target cluster that does not contain a conversion host displays a warning icon
 . Click *Create*.
 . If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Troubleshooting[].
 +
-Your infrastructure mapping is displayed in menu:Compute[Migration].
+Your infrastructure mapping is displayed in menu:Compute[Migration ].
 +
 image:infrastructure_mapping_created.png[]
 
