--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -3,18 +3,23 @@
 
 Prepare the OpenStack Platform environment for migration:
 
+. TBD: Specific recommendations for OpenStack Platform deployment
+// To do
 . Ensure that the datastore has sufficient space for the virtual machines you are migrating.
 
 . Set the BIOS settings of the physical hosts for optimal performance, rather than power-saving, according to the vendor's recommendations and disable the C1E halt state, if applicable.
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 10 or later.
 
-// To do - sec group for conversionapp or CF?
-. Create a security group for the OpenStack Platform conversion appliance and enable the following https://access.redhat.com/articles/417343[ports]:
+. Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider network] for the target instances, to ensure that the IP addresses of the source virtual machines are preserved.
+
+. Create a custom security group for the conversion appliances and the CloudForms instance, enabling the following https://access.redhat.com/articles/417343[ports]:
 * 22 - SSH
-* 443 - CloudForms, Red Hat Virtualization Manager, and VDDK
+* 443 - CloudForms, OpenStack Platform, and VDDK
 * 902 - CloudForms to VMware
 * 5480 - `virt-v2v` to vCenter
+
+. Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map the source virtual machine to an existing flavor.
 
 . Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-create-volume[block storage volumes].
 +
@@ -23,8 +28,7 @@ Prepare the OpenStack Platform environment for migration:
 IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
 ====
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/installing_red_hat_cloudforms_on_red_hat_virtualization/[Red Hat CloudForms] 4.6.4 or later on a Red Hat Virtualization virtual machine or .
-// To do
+. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.6.4 or later.
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
 
