--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
@@ -18,9 +18,10 @@ For a list of supported guest operating systems, see link:https://access.redhat.
 ====
 Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, running these guests is not officially supported.
 ====
+// To do What guest OSes are supported for osp?
 
 What resources will my target environment require?::
-Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process.
+Your target environment must be large enough to hold the migrated virtual machines in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process.
 
 What am I missing?::
 Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
