caps, moving rhv assembly

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,5 +1,5 @@
 [id='Infrastructure_migration_solution_overview']
-= Infrastructure Migration Solution Overview
+= Infrastructure Migration Solution overview
 
 Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform.
 
@@ -11,32 +11,21 @@ link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat Cl
 
 Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
 
-.IMS Phases
+.Migration phases
 
 The Infrastructure Migration Solution has 4 key phases:
 
-. Planning the migration:
+xref:Planning_the_migration[Planning the migration]::
+During the planning phase, you assess your source and target environments to ensure that you have sufficient resources for migration. You may choose to schedule the migration in phases or to create migration groups in order to minimize the impact on your users.
 
-* Consult the xref:Planning_questions[planning questions] to ensure that you have sufficient resources for the migration.
-* Follow xref:Best_practices_for_migration[best practices] to minimize the impact on your users. You may choose to schedule the migration in phases or to create groups of virtual machines that should migrate together.
+xref:Preparing_the_migration_environment[Preparing the migration environment]::
+During this phase, you configure your source and target environments and install the required software.
 
-. Preparing the migration environment:
+xref:Migrating_the_infrastructure[Migrating the infrastructure]::
+During the migration phase, you map the resources of your source environment to your target environment. After creating an infrastructure mapping, you create and run a migration plan.
 
-* xref:Preparing_the_vmware_source_environment[Prepare the VMware environment] for migration.
-* Prepare the xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform] environment as the migration target.
-* Install and configure CloudForms to manage the infrastructure providers and resources.
-* Create and configure xref:Preparing_the_rhv_conversion_hosts[RHV conversion hosts] or OpenStack Platform conversion instances.
-// To do: insert xref:[]
-
-. Migrating the infrastructure:
-
-* xref:Creating_an_Infrastructure_Mapping[Map] your source environment to the target environment.
-* Create and run a xref:Creating_and_running_a_migration_plan[migration plan].
-
-. Verifying the migration:
-
-* Check the completed migration plan for successfully migrated virtual machines.
-* If errors appear, see xref:Troubleshooting[].
+Verifying the migration::
+The completed migration plan displays successfully migrated virtual machines. If errors appear, see xref:Troubleshooting[].
 
 include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
