--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -1,5 +1,5 @@
-[id="IMS_preparation"]
-= Preparing the Migration Environment
+[id="Preparing_the_migration_environment"]
+= Preparing the migration environment
 
 Preparing your environment for migration comprises the following tasks:
 
@@ -11,4 +11,3 @@ Preparing your environment for migration comprises the following tasks:
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
 include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
-include::modules/assembly_Preparing_the_rhv_conversion_hosts.adoc[leveloffset=+1]
