--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -6,7 +6,7 @@ If errors occur for reasons unrelated to the infrastructure mapping or migration
 If the cause of the failed migration is not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
 
 [[Retrying_a_Migration_Plan]]
-== Retrying a Migration Plan
+== Retrying a migration plan
 
 If one or more virtual machines in a migration plan fails to migrate, the migration plan's status is `Failed`. After resolving the issue that caused the migration failure, you can retry the migration plan:
 
@@ -21,15 +21,16 @@ If one or more virtual machines in a migration plan fails to migrate, the migrat
 
 If a migration plan fails and you are not sure of the cause, check the following logs:
 
-* CloudForms migration log: `/var/www/miq/vmdb/log/automation.log`
-* Conversion host logs: `/var/log/vdsm/import/`
+* CloudForms migration logs: `/var/www/miq/vmdb/log/`
+* RHV conversion host logs: `/var/log/vdsm/import/`
+* OpenStack conversion appliance logs: `/var/log/virt-v2v/`
 * Virtual machine migration log: Click menu:Compute[Migrate], click the migration plan name, and click `Download Log`.
 +
-.Migrated Virtual Machine Logs
+.Migrated virtual machine logs
 image:Migrated_VM_details.png[]
 
 [[Common_issues_and_mistakes]]
-== Common Issues and Mistakes
+== Common issues and mistakes
 
 [[Infrastructure_mapping_missing_resources]]
 Infrastructure mapping is missing datastores or clusters::
@@ -48,14 +49,14 @@ Incorrect attributes in the virtual machine CSV import file::
 Correct the xref:CSV_file[CSV file], create a new migration plan, import the updated CSV file, and run the migration plan.
 
 Migration fails immediately::
-If a migration fails immediately, before the progress bar is displayed, this indicates a configuration error in the environment. Check that conversion hosts or appliances have been created and that the RHV conversion host credentials have been added to CloudForms. When the cause has been resolved, xref:Retrying_a_Migration_Plan[retry the migration plan].
+If a migration fails immediately, before the progress bar is displayed, this indicates a configuration error in the environment. Check that conversion hosts or appliances have been configured correctly and that the RHV conversion host credentials have been added to CloudForms. When the cause has been resolved, xref:Retrying_a_Migration_Plan[retry the migration plan].
 
 Migration fails during virtual machine conversion::
-If a migration fails while the virtual machines are being converted (the progress bar updates), click the migration plan to go to the details page, and download the conversion log for the virtual machine(s) that failed to migrate. Check that the source virtual machines do not have mounted disks and that source virtual machine names do not conflict with existing virtual machine names in the target environment. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
+Check the xref:Logs[conversion logs] for the virtual machines that failed to migrate. When the cause of the failed migration has been resolved, you can xref:Retrying_a_Migration_Plan[retry the migration plan].
 +
-Red Hat Virtualization only: Check that the source virtual machine names do not contain spaces or special characters.
+Red Hat Virtualization: Check that the source virtual machine names do not contain spaces or special characters or duplicate existing virtual machine names in the target environment and that they do not have mounted disks.
 +
-OpenStack Platform only: Check that the source virtual machines are powered on and that VMware Tools has been installed.
+OpenStack Platform: Check that the source virtual machines are powered on and that VMware Tools has been installed.
 
 [[SSH_transformation_fails]]
 SSH transformation fails::
