--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Automating_pre_and_post_migration_tasks_with_ansible.adoc
@@ -1,5 +1,5 @@
 [[Automating_pre_and_post_migration_tasks_with_ansible]]
-= Advanced Option: Automating Pre- and Post-Migration Tasks with Ansible
+= Automating pre- and post-migration tasks with Ansible
 
 You can perform automated tasks before and after a virtual machine is migrated, such as removing web servers from a load-balancing pool before migration and adding them back to the pool after migration. Each task is an Ansible service catalog item, which you xref:Advanced_options_screen[select] when you create the migration plan.
 
