--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -1,5 +1,5 @@
 [id="Vmware_to_rhv_workflow"]
-= VMware to Red Hat Virtualization Workflow
+= VMware to Red Hat Virtualization workflow
 
 This workflow describes the process of migrating  from VMware to Red Hat Virtualization.
 
