--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
@@ -1,5 +1,5 @@
 [id="Configuring_rhv_conversion_hosts_in_cloudforms"]
-= Configuring RHV Conversion Hosts in CloudForms
+= Configuring RHV conversion hosts in CloudForms
 
 . Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
@@ -10,5 +10,5 @@
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
 . Click `Validate`. If a success message is displayed, click `Save`.
 
-.Conversion Host Properties
+.Conversion host properties
 image:Conversion_host_properties.png[]
