--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,9 +1,9 @@
 [[Creating_an_Infrastructure_Mapping]]
-= Creating an Infrastructure Mapping
+= Creating an infrastructure mapping
 
 The infrastructure mapping maps your source resources to target resources.
 
-.Migration Screen
+.Migration screen
 image:Compute_Manage_UI.png[]
 
 [NOTE]
@@ -15,33 +15,38 @@ Red Hat Virtualization only: Before creating an infrastructure mapping, you must
 
 . Click menu:Compute[Migration > Overview].
 . Click *Create Infrastructure Mapping*.
-. Enter the name of your mapping and click *Next*.
-. Select a source cluster and a target cluster.
+. Enter the name of your mapping, an optional description, select a *Target Provider*, and click *Next*.
+
+. Map the clusters:
+
+.. Select a source cluster and a target cluster.
 +
 [NOTE]
 ====
 A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
 ====
-// To do: needs clarification for OSP
 
-. Click *Add Mapping* and *Next*.
+.. Click *Add Mapping*. You can map additional source clusters.
+.. When you have finished mapping the clusters, click *Next*.
 
-. Map the datastore of each cluster:
+. Map the datastores:
 
-.. Select the target cluster from the drop-down list.
-.. Select a source datastore and a target datastore.
-.. Click *Add Mapping* and *Next*.
+.. Select a source cluster from the drop-down list.
+.. Select one or more source datastores and a target datastore.
+.. Click *Add Mapping*. You can map additional source clusters and datastores.
+.. When you have finished mapping the datastores, click *Next*.
 
-. Map the network of each cluster:
+. Map the networks:
 
-.. Select the target cluster from the drop-down list.
-.. Select a source network and a target network.
-.. Click *Add Mapping*.
+.. Select a source cluster from the drop-down list.
+.. Select one or more source networks and a target network.
+.. Click *Add Mapping*. You can map the networks of additional source clusters.
 
-. Click *Create*.
+. When you have finished mapping your resources, click *Create*.
+
 . If a successful mapping message is displayed, click *Close*. If error messages appear, see xref:Troubleshooting[].
 +
-Your infrastructure mapping is displayed in menu:Compute[Migration ].
+Your infrastructure mapping is displayed in menu:Compute[Migration > Infrastructure Mappings].
 +
 image:infrastructure_mapping_created.png[]
 
