--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,5 +1,5 @@
 [id='Creating_and_running_a_migration_plan']
-= Creating and Running a Migration Plan
+= Creating and running a migration plan
 
 .Prerequisites
 
@@ -47,7 +47,7 @@ A virtual machine will be in the same power state (`on` or `off`) after migratio
 .. Select *Choose from a list of VMs discovered in the selected infrastructure mapping*.
 .. Click *Next*.
 +
-.Discovered Virtual Machines
+.Discovered virtual machines
 image:Discover_VMs.png[]
 
 * If you are importing a CSV file:
@@ -59,7 +59,7 @@ image:Discover_VMs.png[]
 . Select the virtual machines to migrate and click *Next* to go to *Advanced Options*.
 +
 [[Advanced_options_screen]]
-.Advanced Options
+.Advanced options
 image:Advanced_Options.png[]
 +
 (Optional) You can select xref:Automating_pre_and_post_migration_tasks_with_ansible[Ansible playbook services] to run on the virtual machines in the migration plan before or after the migration. For example, the xref:Ims_rhel_pre-migration_ansible_playbook_example[RHEL pre-migration playbook] performs several tasks to configure a target RHEL virtual machine. You must create the xref:Creating_an_Ansible_service_catalog_item[Ansible environment and service catalog item] before the migration plan.
@@ -80,7 +80,7 @@ During migration, the counter displaying the migration plan progress (in menu:Co
 . When the migration plan has finished, check the status of the migration plan under *Completed Migrations*. The completed migration plan shows successfully migrated virtual machines. If error messages appear, see xref:Troubleshooting[].
 
 [[Remigrating_Virtual_Machines]]
-.Remigrating Virtual Machines
+.Remigrating virtual machines
 
 To migrate previously migrated virtual machines:
 
