--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_openstack_conversion_appliances.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_openstack_conversion_appliances.adoc
@@ -3,7 +3,12 @@
 
 appliance shipped with OSP 14
 
-Has to be manually configured for VDDK. Not sure about SSH
+Has to be manually configured for VDDK.
+
+
+SSH - same as RHV (3.2.2)
+
+
 Download VDDK
 
 Add conversion appliance size requirements to section on creating the conversion appliance:
@@ -20,3 +25,6 @@ about 5 GB should be enough.
 
 Enabled as conversion appliance in UI.  Compute > Providers > Instances
 Enable/disable, VDDK or SSH. If VDDK, paste in URL for VDDK kit.
+
+
+Need to run playbooks for conversion appliance
