--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation.adoc
@@ -1,5 +1,5 @@
 [id="Creating_and_configuring_rhv_conversion_hosts_for_vddk_transformation"]
-= Creating and Configuring RHV Conversion Hosts for VDDK Transformation
+= Creating and configuring RHV conversion hosts for VDDK transformation
 
 . Go to link:https://www.vmware.com/support/pubs/[VMware Documentation], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 
@@ -22,7 +22,7 @@ all:
     v2v_vddk_package_name: VMware-vix-disklib-_version_.x86_64.tar.gz
     v2v_vddk_package_url: http://_Manager_FQDN_/VMware-vix-disklib-_version_.x86_64.tar.gz
 ----
-
+// To do: Confirm with Fabien that colon belongs in inventory file
 . Enable the conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
