--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -1,5 +1,5 @@
 [id="Preparing_the_osp_target_environment"]
-= Preparing Red Hat OpenStack Platform Environment
+= Preparing Red Hat OpenStack platform environment
 
 Prepare the OpenStack Platform environment for migration:
 
