--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -1,5 +1,5 @@
 [id="Preparing_the_rhv_target_environment"]
-= Preparing the Red Hat Virtualization Environment
+= Preparing the Red Hat Virtualization environment
 
 Prepare the Red Hat Virtualization environment for migration:
 
