--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,5 +1,5 @@
 [id="Preparing_the_vmware_source_environment"]
-= Preparing the VMware Environment
+= Preparing the VMware environment
 
 Prepare the VMware source environment for migration:
 
