--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Planning_questions.adoc
@@ -1,5 +1,5 @@
 [id="Planning_questions"]
-= Planning Questions
+= Planning questions
 
 These questions will ensure that you have sufficient resources to perform the migration:
 
