--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -1,9 +1,9 @@
-[[Migration]]
-= Migrating the Infrastructure
+[[Migrating_the_infrastructure]]
+= Migrating the infrastructure
 
 Migrating your infrastructure comprises 2 tasks:
 
-* xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (cluster, datastore, and networks) of your source environment to your target environment and selecting virtual machines to migrate
+* xref:Creating_an_Infrastructure_Mapping[Mapping] the resources (clusters, datastores, and networks) of your source environment to your target environment and selecting virtual machines to migrate
 
 * Creating and running a xref:Creating_and_running_a_migration_plan[migration plan], with the option of running xref:Automating_pre_and_post_migration_tasks_with_ansible[automated tasks] before or after each virtual machine is migrated.
 
