--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -1,5 +1,5 @@
 [id="Vmware_to_osp_workflow"]
-= VMware to Red Hat OpenStack Platform Workflow
+= VMware to Red Hat OpenStack platform workflow
 
 his workflow describes the process of migrating  from VMware to Red Hat OpenStack Platform.
 
