--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -1,5 +1,5 @@
 [id="Creating_and_configuring_rhv_conversion_hosts_for_ssh_transformation"]
-= Creating and Configuring RHV Conversion Hosts for SSH Transformation
+= Creating and configuring RHV conversion hosts for SSH transformation
 
 . On the Manager machine, create `/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks/conversion_hosts_inventory.yml`  with the following variables:
 +
